--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 flask==0.12.2
 flask_socketio==4.3.1
 face_recognition==1.2.3
-opencv-python==4.4.0.44
+opencv-python
 pandas==1.1.2
 gunicorn==20.0.4
 numpy
 cmake
 dlib
+opencv
+cv2
