--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ flask==0.12.2
 flask_socketio==4.3.1
 face_recognition==1.2.3
 opencv-python
-pandas==1.1.2
-gunicorn==20.0.4
+pandas
+gunicorn=
 numpy
 cmake
 dlib
-cv2
